tests/baselines/reference/mergedInterfacesWithConflictingPropertyNames2.errors.txt
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames2.ts(6,5): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames2.ts(15,9): error TS2300: Duplicate identifier 'x'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames2.ts(39,9): error TS2300: Duplicate identifier 'x'.


==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames2.ts (3 errors) ====
    interface A {
        x: string; // error
    }
    
    interface A {
        x: string; // error
        ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    module M {
        interface A<T> {
            x: T;
        }
    
        interface A<T> {
            x: T;  // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
        }
    }
    
    module M2 {
        interface A<T> {
            x: T;
        }   
    }
    
    module M2 {
        interface A<T> {
            x: T;  // ok, different declaration space than other M2
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;  // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
        }
    }